[project]
name = "pyrst"
version = "0.1.0"
description = "A WASM rST editor using Pyodide and docutils"
readme = "README.md"
authors = [
    { name = "Jacob Coffee", email = "jacob@z7x.org" }
]
requires-python = ">=3.14"
dependencies = [
    "docutils>=0.20,<0.22",
]

[project.scripts]
pyrst = "pyrst:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    # fmt/lint/type check
    "ruff>=0.14.5",
    "ty>=0.0.1a26",
    # - testing
    "pytest>=9.0.1",
    "pytest-pyodide>=0.58.10",
    "pytest-cov>=6.0.0",
    "pytest-sugar>=1.1.1",
    # - for prettier mainly, maybe daisyUI later?
    "nodeenv>=1.9.1",
    # - Docs thngs
    "sphinx>=8.1.3",
    "shibuya>=2024.11.7",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-autobuild>=2025.8.25",
]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--dist-dir=src/pyrst",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/pyrst"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["PLC0415", "BLE001", "INP001", "D203", "D213", "COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # allow assert in tests
    "ANN001",
    "ANN201",
    "PERF401",
    "PLR2004",
    "ARG001",
]

[tool.ty.rules]
# Ignore unresolved imports for Pyodide-specific modules that only exist in WebAssembly runtime
unresolved-import = "ignore"
